@@ -1,3 +1,8 @@
+Sat Dec  1 18:52:54 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* signal/sigexec.s (__unixlib_exec_sig): Fix passing sighandler_t
+	arguments.
+
 Sun Nov 18 14:51:35 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* include/string/byteswap.h: Upgrade to glibc 2.16.0 copy. Fixes
